// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders answer with child correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 10,
        "elevation": 4,
        "paddingHorizontal": 15,
        "paddingVertical": 20,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.23,
        "shadowRadius": 2.62,
      },
      undefined,
    ]
  }
>
  <Text>
    Body text
  </Text>
</View>
`;

exports[`renders default style correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 10,
        "elevation": 4,
        "paddingHorizontal": 15,
        "paddingVertical": 20,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.23,
        "shadowRadius": 2.62,
      },
      undefined,
    ]
  }
/>
`;
